# spec-kit

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  Makefile  PHASE_2_LLM_GENERATION.md  PR_PHASE_2_SUMMARY.md  README.md  conftest.py  jest.setup.js  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  test_extended_artifacts_generation.py  tox.ini
.specify/memory/: constitution-metadata.json  constitution.md
backend/: requirements.txt
backend/app/: main.py
backend/app/api/endpoints/: coverage.py
backend/app/core/: test_coverage_analyzer.py
frontend/src/components/coverage/: CoverageAnalyzer.tsx
scripts/: setup-hooks.sh  validate-commit.sh
specs/001-feature-specification-enhanced-unit-testing-covera/: metadata.json  plan.md  spec.md  tasks.md
src/core/config/: defaults.ts  index.ts  loader.ts  manager.ts  types.ts  validator.ts
src/core/test-discovery/: TestDiscoveryEngine.ts  index.ts  types.ts
src/core/test-discovery/__tests__/: TestDiscoveryEngine.test.ts
src/spec_kit/: __init__.py  cli.py
src/specify_cli/: __init__.py  extensions.py
src/speckit/: __init__.py  cli.py  config.py  exceptions.py  llm.py  schemas.py  speckit.py
src/speckit/core/: __init__.py  analyzer.py  artifacts.py  clarifier.py  constitution.py  implementer.py  planner.py  specification.py  tasker.py
src/speckit/mcp/: __main__.py  server.py
src/speckit/storage/: base.py  file_storage.py
src/speckit/templates/: __init__.py  api_contract.jinja2  checklist.jinja2  data_model.jinja2  quickstart.jinja2  research.jinja2
tests/: __init__.py  conftest.py  test_example.py
tests/e2e/: __init__.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py
tests/utils/: __init__.py
